@@ -959,6 +959,19 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     iP4500_channel_order
   },
+  { /* Canon PIXMA iP4500 CD-R tray F */
+    "PIXMA iP4500", 3,          /*model, model_id*/
+    842, 17*72,       /* max paper width and height */
+    10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
+    &canon_PIXMA_iP4500_slotlist,
+    CANON_CAP_STD0|CANON_CAP_DUPLEX|CANON_CAP_r|CANON_CAP_px|CANON_CAP_P|CANON_CAP_I,0x64,control_cmd_PIXMA_iP4200,  /* features */
+    &canon_PIXMA_iP4500_modelist,
+    &canon_PIXMA_iP4500_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
   { /* Canon PIXMA iP4600 */
     "PIXMA iP4600", 3,          /*model, model_id*/
     8.5*72, 26.625*72, /* max paper width and height */
@@ -972,24 +985,11 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     iP4500_channel_order
   },
-  { /* Canon PIXMA iP4500 CD-R tray F */
-    "PIXMA iP4500", 3,          /*model, model_id*/
-    842, 17*72,       /* max paper width and height */
-    10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
-    &canon_PIXMA_iP4500_slotlist,
-    CANON_CAP_STD0|CANON_CAP_DUPLEX|CANON_CAP_r|CANON_CAP_px|CANON_CAP_P|CANON_CAP_I,0x64,control_cmd_PIXMA_iP4200,  /* features */
-    &canon_PIXMA_iP4500_modelist, /* changed from iP5300 */
-    &canon_PIXMA_iP4500_paperlist,
-    NULL,
-    NULL,
-    NULL,
-    iP4500_channel_order
-  },
   { /* Canon PIXMA iP4700 CD-R tray G */
     "PIXMA iP4700", 3,          /*model, model_id*/
     842, 17*72,       /* max paper width and height */
     10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
-    &canon_PIXMA_iP4600_slotlist, /* there is some ESC (r 0x65 command for CD tray also, not sure why */
+    &canon_PIXMA_iP4600_slotlist,
     CANON_CAP_STD0|CANON_CAP_DUPLEX|CANON_CAP_r|CANON_CAP_px|CANON_CAP_P|CANON_CAP_I|CANON_CAP_XML,0x64,control_cmd_PIXMA_iP4200,  /* features */
     &canon_PIXMA_iP4700_modelist,
     &canon_PIXMA_iP4700_paperlist,
